--- a/_config.yml
+++ b/_config.yml
@@ -1,20 +1,20 @@
-title: Workshop Name # *** Enter workshop title here 
-github_repo_url: "https://scds.github.io/scds-template/" # *** Enter workshop URL (in github pages) here
-gh_edit_repository: "https://github.com/scds/scds-template" # *** Enter the github URL for your repo
-ga_tracking: "" # *** Set it to "G-HTFKKVJK6K" when website is done.  
+title: 2024-2025 DR Workshops # *** Enter workshop title here 
+github_repo_url: "https://scds.github.io/dr24-25/" # *** Enter workshop URL (in github pages) here
+gh_edit_repository: "https://github.com/scds/dr24-25/" # *** Enter the github URL for your repo
+ga_tracking: "G-P9SV8Z4QSV" # *** This needs to be set up in Google Analytics once you know the website URL (ask Jay to do this). Then the tracking code needs to be taken from Google Analytics and pasted here.  
 
 # This line appears in the footer. Use it to credit the people who created the workshop content, and those who set up the online pages. 
 # If you know some HTML, you can use HTML tags.
 # To create a link: <a href="PUT URL HERE">the text you want to show up</a>
 # Template: 'Module content created by <a href="LINK HERE">NAME</a> and <a href="LINK HERE">NAME</a>; edited for online use and online pages created by <a href="LINK HERE">NAME</a>.'
-credits: 'Module content created by the <a href="https://scds.ca">Sherman Centre for Digital Scholarship</a>.'
+credits: 'Content created by the <a href="https://research.mcmaster.ca/home/support-for-researchers/research-resources/digital-research-commons-pilot-drcp/">DRCP</a>; online pages created and edited for online use by <a href="https://www.multipixels.dev">Richie Motorgeanu</a>.'
 
 # DMDS Settings
-subtitle: "This workshop is part of the Do More with Digital Scholarship (DMDS) series."
-nav_footer_logo_bottom: "https://raw.githubusercontent.com/scds/jtd-mcmaster/main/assets/images/scds-logo.png"
-nav_footer_logo_bottom_href: "https://scds.ca/"
-nav_footer_logo_top: ""
-nav_footer_logo_top_href: ""
+# subtitle: "This workshop is part of the Do More with Digital Scholarship (DMDS) series."
+# nav_footer_logo_bottom: "https://raw.githubusercontent.com/scds/jtd-mcmaster/main/assets/images/scds-logo.png"
+# nav_footer_logo_bottom_href: "https://scds.ca/"
+# nav_footer_logo_top: ""
+# nav_footer_logo_top_href: ""
 
 # DASH settings
 # subtitle: 'This workshop is part of the Data Analysis Support Hub (DASH) series.'
@@ -31,11 +31,11 @@ nav_footer_logo_top_href: ""
 # nav_footer_logo_top_href: "https://rdm.mcmaster.ca/"
 
 # OTHER settings - Override series specific settings
-# subtitle: "This workshop is part of the __ series."
-# nav_footer_logo_bottom: "https://raw.githubusercontent.com/scds/jtd-mcmaster/main/assets/images/scds-logo.png"
-# nav_footer_logo_bottom_href: "https://scds.ca/"
-# nav_footer_logo_top: ""
-# nav_footer_logo_top_href: ""
+subtitle: "These workshops are part of the Digital Research (DR) series."
+nav_footer_logo_bottom: "https://raw.githubusercontent.com/scds/jtd-mcmaster/main/assets/images/scds-logo.png"
+nav_footer_logo_bottom_href: "https://scds.ca/"
+nav_footer_logo_top: https://raw.githubusercontent.com/scds/jtd-mcmaster/main/assets/images/drcp-logo.png""
+nav_footer_logo_top_href: "http://askresearch.mcmaster.ca/"
 
 #  _____       _   _   _          _      _                            
 # | ____|   __| | (_) | |_       / \    | |__     ___   __   __   ___ 
